--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <div class="testimonial-content">
-                        <p>"Hurufia membantu saya memahami tajwid dengan lebih mudah. Materinya sangat terstruktur dan mudah dipahami. Saya bisa belajar kapan saja dan di mana saja."</p>
+                        <p>"Hurufia membantu saya memahami tajwid dengan lebih mudah. Materinya sangat terstruktur dan mudah dipahami. Saya bisa belajar kapan saja dimana saja dan sangat menyenangkan."</p>
                     </div>
                     <div class="testimonial-author">
-                        <div class="author-avatar">A</div>
+                        <div class="author-avatar">C</div>
                         <div class="author-info">
-                            <h4>Ahmad</h4>
+                            <h4>Cikal</h4>
                             <p>Mahasiswa</p>
-                            <span class="author-location"><i class="fas fa-map-marker-alt"></i> Jakarta</span>
+                            <span class="author-location"><i class="fas fa-map-marker-alt"></i> Bandung</span>
                         </div>
                     </div>
                 </div>
@@ -102,10 +102,10 @@
                         <p>"Platform yang sangat membantu untuk belajar tajwid. Saya bisa belajar kapan saja dan di mana saja. Progress tracking-nya sangat membantu memantau perkembangan belajar."</p>
                     </div>
                     <div class="testimonial-author">
-                        <div class="author-avatar">S</div>
+                        <div class="author-avatar">A</div>
                         <div class="author-info">
-                            <h4>Siti</h4>
-                            <p>Ibu Rumah Tangga</p>
+                            <h4>Afin</h4>
+                            <p>Mahasiswa</p>
                             <span class="author-location"><i class="fas fa-map-marker-alt"></i> Bandung</span>
                         </div>
                     </div>
@@ -122,11 +122,11 @@
                         <p>"Sangat membantu dalam meningkatkan kualitas bacaan Al-Qur'an. Metode pembelajarannya modern dan mudah dipahami. Komunitasnya juga sangat mendukung."</p>
                     </div>
                     <div class="testimonial-author">
-                        <div class="author-avatar">R</div>
+                        <div class="author-avatar">K</div>
                         <div class="author-info">
-                            <h4>Rudi</h4>
-                            <p>Karyawan</p>
-                            <span class="author-location"><i class="fas fa-map-marker-alt"></i> Surabaya</span>
+                            <h4>Katon</h4>
+                            <p>Mahasiswa</p>
+                            <span class="author-location"><i class="fas fa-map-marker-alt"></i> Bandung</span>
                         </div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                             <ul>
                                 <li><i class="fas fa-envelope"></i> info@hurufia.com</li>
                                 <li><i class="fas fa-phone"></i> +62 123 4567 890</li>
-                                <li><i class="fas fa-map-marker-alt"></i> Jakarta, Indonesia</li>
+                                <li><i class="fas fa-map-marker-alt"></i> Bandung, Indonesia</li>
                             </ul>
                         </div>
                     </div>
