--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz - Hurufia</title>
+    <title>Mad - Hurufia</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
         <div class="construction-content">
             <i class="fas fa-tools construction-icon"></i>
             <h1>Materi Sedang Disusun</h1>
-            <p>Mohon maaf, materi tentang Quiz masih dalam tahap pengembangan. Kami sedang menyusun konten yang berkualitas untuk pembelajaran Anda.</p>
+            <p>Mohon maaf, materi tentang Mad masih dalam tahap pengembangan. Kami sedang menyusun konten yang berkualitas untuk pembelajaran Anda.</p>
             <div class="construction-info">
                 <i class="fas fa-clock"></i>
                 <span>Segera hadir!</span>
