feat: add AOS animations to all sections in index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" data-aos="fade-down" data-aos-duration="1000">
         <div class="container">
             <div class="logo">
                 <i class="fas fa-book-quran"></i>
@@ -28,7 +29,7 @@
 
     <header class="hero">
         <div class="container">
-            <div class="hero-content">
+            <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
                 <h1>Hurufia</h1>
                 <p class="tagline">Kuasai Tajwid, Sempurnakan Bacaan</p>
                 <p class="description">Platform pembelajaran tajwid online yang interaktif dan menyenangkan. Mulai perjalanan untuk bacaan Al-Qur'an yang lebih baik.</p>
@@ -37,7 +38,7 @@
                     <a href="#tentang" class="cta-button secondary">Pelajari Lebih Lanjut</a>
                 </div>
             </div>
-            <div class="hero-image">
+            <div class="hero-image" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300">
                 <img src="asset/heroo.jpg" alt="Ilustrasi Pembelajaran Tajwid">
             </div>
         </div>
@@ -45,19 +46,19 @@
 
     <section id="tentang" class="about">
         <div class="container">
-            <h2>Mengapa Memilih Hurufia?</h2>
+            <h2 data-aos="fade-up" data-aos-duration="1000">Mengapa Memilih Hurufia?</h2>
             <div class="about-grid">
-                <div class="about-card">
+                <div class="about-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="about-icon"><i class="fas fa-graduation-cap"></i></div>
                     <h3>Metode Pembelajaran Modern</h3>
                     <p>Kombinasi antara pembelajaran tradisional dan teknologi modern untuk hasil yang optimal.</p>
                 </div>
-                <div class="about-card">
+                <div class="about-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <div class="about-icon"><i class="fas fa-comments"></i></div>
                     <h3>Sistem Feedback</h3>
                     <p>Dapatkan umpan balik detail untuk mengidentifikasi kelemahan dan memperbaiki bacaan tajwid Anda.</p>
                 </div>
-                <div class="about-card">
+                <div class="about-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="about-icon"><i class="fas fa-gamepad"></i></div>
                     <h3>Pembelajaran Interaktif</h3>
                     <p>Quiz dan tes pemahaman yang menyenangkan untuk mengukur dan meningkatkan kemampuan tajwid Anda.</p>
@@ -68,9 +69,9 @@
 
     <section class="testimonials">
         <div class="container">
-            <h2>Apa Kata Mereka?</h2>
+            <h2 data-aos="fade-up" data-aos-duration="1000">Apa Kata Mereka?</h2>
             <div class="testimonial-grid">
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                     <div class="testimonial-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -90,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <div class="testimonial-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -110,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                     <div class="testimonial-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -131,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="testimonial-stats">
+            <div class="testimonial-stats" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                 <div class="stat-item">
                     <h3>10K+</h3>
                     <p>Pembelajar Aktif</p>
@@ -150,19 +151,19 @@
 
     <section class="cta-section">
         <div class="container">
-            <div class="cta-content">
+            <div class="cta-content" data-aos="fade-up" data-aos-duration="1000">
                 <h2>Siap Memulai Perjalanan Belajar Tajwid?</h2>
                 <p>Bergabunglah dengan ribuan pembelajar lainnya di Hurufia</p>
                 <div class="cta-features">
-                    <div class="cta-feature">
+                    <div class="cta-feature" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <i class="fas fa-check-circle"></i>
                         <span>Materi Lengkap</span>
                     </div>
-                    <div class="cta-feature">
+                    <div class="cta-feature" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <i class="fas fa-check-circle"></i>
                         <span>Latihan Interaktif</span>
                     </div>
-                    <div class="cta-feature">
+                    <div class="cta-feature" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                         <i class="fas fa-check-circle"></i>
                         <span>Sertifikat Penyelesaian</span>
                     </div>
@@ -174,10 +175,10 @@
 
     <section id="newsletter" class="newsletter">
         <div class="container">
-            <div class="newsletter-content">
+            <div class="newsletter-content" data-aos="fade-up" data-aos-duration="1000">
                 <h2>Dapatkan Update Terbaru</h2>
                 <p>Berlangganan newsletter kami untuk mendapatkan informasi terbaru tentang materi pembelajaran dan tips tajwid.</p>
-                <form class="newsletter-form">
+                <form class="newsletter-form" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <input type="email" placeholder="Masukkan email Anda" required>
                     <button type="submit" class="newsletter-button">
                         <i class="fas fa-paper-plane"></i>
@@ -190,9 +191,9 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
+            <div class="footer-content" data-aos="fade-up" data-aos-duration="1000">
                 <div class="footer-main">
-                    <div class="footer-brand">
+                    <div class="footer-brand" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                         <div class="logo">
                             <i class="fas fa-book-quran"></i>
                             Hurufia
@@ -206,7 +207,7 @@
                         </div>
                     </div>
                     <div class="footer-links">
-                        <div class="footer-column">
+                        <div class="footer-column" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                             <h4>Navigasi</h4>
                             <ul>
                                 <li><a href="#beranda">Beranda</a></li>
@@ -215,7 +216,7 @@
                                 <li><a href="materi.html">Materi</a></li>
                             </ul>
                         </div>
-                        <div class="footer-column">
+                        <div class="footer-column" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                             <h4>Kontak</h4>
                             <ul>
                                 <li><i class="fas fa-envelope"></i> info@hurufia.com</li>
@@ -225,7 +226,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-bottom">
+                <div class="footer-bottom" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                     <p>&copy; 2024 Hurufia. All rights reserved.</p>
                     <div class="footer-legal">
                         <a href="#">Kebijakan Privasi</a>
@@ -260,6 +261,15 @@
                 top: 0,
                 behavior: 'smooth'
             });
+        });
+    </script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            once: true,
+            duration: 1000,
+            offset: 100
         });
     </script>
 </body>
