--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                         <i class="fas fa-check-circle"></i>
                         <span>Sertifikat Penyelesaian</span>
                     </div>
-                </div>
-                <a href="materi.html" class="cta-button primary">Mulai Sekarang</a>
+                </div >
+                <a href="materi.html" class="cta-button primary" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Mulai Sekarang</a>
             </div>
         </div>
     </section>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-bottom" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                <div class="footer-bottom">
                     <p>&copy; 2024 Hurufia. All rights reserved.</p>
                     <div class="footer-legal">
                         <a href="#">Kebijakan Privasi</a>
@@ -267,7 +267,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            once: true,
             duration: 1000,
             offset: 100
         });
