--- a/materi.html
+++ b/materi.html
@@ -8,34 +8,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Amiri:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar" data-aos="fade-down" data-aos-duration="1000">
         <div class="container">
             <a href="index.html" class="logo">
                 <i class="fas fa-book-quran"></i>
                 Hurufia
             </a>
             <ul class="nav-links">
-                <li><a href="index.html#beranda">Beranda</a></li>
-                <li><a href="index.html#tentang">Tentang</a></li>
-                <li><a href="index.html#newsletter">Kontak</a></li>
-                <li><a href="materi.html" class="nav-button">Mulai Belajar</a></li>
+                <li><a href="tes.html">Tes Ilmu</a></li>
+                <li><a href="quiz.html">Quiz Tajwid</a></li>
             </ul>
         </div>
     </nav>
 
-    <header class="materi-header">
+    <header class="materi-header" >
         <div class="container">
-            <h1>Materi Pembelajaran</h1>
-            <p class="subtitle">Pilih materi yang ingin Anda pelajari</p>
+            <h1 data-aos="fade-right" data-aos-duration="3000">Materi Pembelajaran</h1>
+            <p class="subtitle" data-aos="fade-left" data-aos-duration="3000">Pilih materi yang ingin Anda pelajari</p>
         </div>
     </header>
 
     <section class="materi-grid">
         <div class="container">
-            <div class="materi-card">
+            <div class="materi-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <div class="materi-icon">
                     <span class="arabic-letter">ن</span>
                 </div>
@@ -50,7 +49,7 @@
                 <a href="nun.html" class="materi-button">Mulai Belajar</a>
             </div>
 
-            <div class="materi-card">
+            <div class="materi-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                 <div class="materi-icon">
                     <span class="arabic-letter">م</span>
                 </div>
@@ -65,7 +64,7 @@
                 <a href="mim.html" class="materi-button">Mulai Belajar</a>
             </div>
 
-            <div class="materi-card">
+            <div class="materi-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <div class="materi-icon">
                     <span class="arabic-letter">ل</span>
                 </div>
@@ -80,7 +79,7 @@
                 <a href="lam.html" class="materi-button">Mulai Belajar</a>
             </div>
 
-            <div class="materi-card">
+            <div class="materi-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <div class="materi-icon">
                     <span class="arabic-letter">ا</span>
                 </div>
@@ -95,7 +94,7 @@
                 <a href="mad.html" class="materi-button">Mulai Belajar</a>
             </div>
 
-            <div class="materi-card">
+            <div class="materi-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                 <div class="materi-icon">
                     <span class="arabic-letter">ر</span>
                 </div>
@@ -110,7 +109,7 @@
                 <a href="tafkhim.html" class="materi-button">Mulai Belajar</a>
             </div>
 
-            <div class="materi-card">
+            <div class="materi-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                 <div class="materi-icon">
                     <span class="arabic-letter">ق</span>
                 </div>
@@ -128,10 +127,10 @@
     </section>
 
     <section class="materi-features">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="2000">
             <h2>Evaluasi Pembelajaran</h2>
             <div class="features-grid">
-                <div class="feature-card">
+                <div class="feature-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                     <a href="tes.html" class="feature-link">
                         <div class="feature-icon">
                             <i class="fas fa-tasks"></i>
@@ -141,7 +140,7 @@
                         <span class="feature-button">Mulai Tes</span>
                     </a>
                 </div>
-                <div class="feature-card">
+                <div class="feature-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <a href="quiz.html" class="feature-link">
                         <div class="feature-icon">
                             <i class="fas fa-brain"></i>
@@ -157,7 +156,7 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
+            <div class="footer-content " data-aos="fade-right" data-aos-duration="3000">
                 <div class="footer-main">
                     <div class="footer-brand">
                         <a href="index.html" class="logo">
@@ -167,7 +166,7 @@
                         <p>Platform pembelajaran tajwid online terbaik untuk meningkatkan kualitas bacaan Al-Qur'an Anda.</p>
                     </div>
                 </div>
-                <div class="footer-bottom">
+                <div class="footer-bottom" >
                     <p>&copy; 2024 Hurufia. All rights reserved.</p>
                 </div>
             </div>
@@ -178,8 +177,9 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        // Scroll to Top Button
+        AOS.init();
         const scrollToTopBtn = document.getElementById('scrollToTop');
         
         window.addEventListener('scroll', () => {
