--- a/materi.html
+++ b/materi.html
@@ -21,11 +21,6 @@
             <ul class="nav-links">
                 <li><a href="tes.html">Tes Ilmu</a></li>
                 <li><a href="quiz.html">Quiz Tajwid</a></li>
-                <li>
-                    <button id="resetProgressBtn" class="reset-progress" title="Reset semua progress pembelajaran">
-                        <i class="fas fa-redo-alt"></i> Reset Progress
-                    </button>
-                </li>
             </ul>
         </div>
     </nav>
@@ -182,15 +177,31 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <button id="resetProgressBtn" class="reset-progress" title="Reset semua progress pembelajaran">
+        <i class="fas fa-redo-alt"></i>
+    </button>
+
     <!-- Reset progress confirmation modal -->
-    <div id="resetModal" class="modal-overlay" style="display: none;">
+    <div id="resetModal" class="modal-overlay">
         <div class="modal">
-            <i class="fas fa-exclamation-triangle modal-icon" style="color: #e74c3c;"></i>
-            <h3 class="modal-title">Konfirmasi Reset</h3>
-            <p class="modal-message">Apakah Anda yakin ingin menghapus semua data progress pembelajaran?<br>Tindakan ini tidak dapat dibatalkan.</p>
+            <div class="modal-header">
+                <i class="fas fa-exclamation-triangle modal-icon"></i>
+                <h3 class="modal-title">Reset Progress Pembelajaran</h3>
+            </div>
+            <div class="modal-body">
+                <p class="modal-message">Apakah Anda yakin ingin menghapus semua data progress pembelajaran? Tindakan ini tidak dapat dibatalkan.</p>
+                <div class="modal-warning">
+                    <i class="fas fa-info-circle"></i>
+                    <span>Semua progress pembelajaran akan dihapus dan dikembalikan ke 0%</span>
+                </div>
+            </div>
             <div class="modal-buttons">
-                <button class="modal-button modal-cancel" id="cancelResetBtn">Batal</button>
-                <button class="modal-button modal-confirm" id="confirmResetBtn" style="background: linear-gradient(135deg, #e74c3c, #c0392b);">Reset Semua</button>
+                <button class="modal-button modal-cancel" id="cancelResetBtn">
+                    <i class="fas fa-times"></i> Batal
+                </button>
+                <button class="modal-button modal-confirm" id="confirmResetBtn">
+                    <i class="fas fa-redo-alt"></i> Reset Semua
+                </button>
             </div>
         </div>
     </div>
@@ -200,6 +211,7 @@
     <script>
         AOS.init();
         const scrollToTopBtn = document.getElementById('scrollToTop');
+        const resetProgressBtn = document.getElementById('resetProgressBtn');
         
         window.addEventListener('scroll', () => {
             if (window.pageYOffset > 300) {
@@ -278,6 +290,148 @@
     </script>
 
     <style>
+        /* Reset Progress Button Styling */
+        .reset-progress {
+            position: fixed;
+            bottom: 30px;
+            left: 30px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, #e74c3c, #c0392b);
+            color: white;
+            border: none;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.2rem;
+            box-shadow: 0 4px 15px rgba(231, 76, 60, 0.3);
+            transition: all 0.3s ease;
+            z-index: 100;
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .reset-progress:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(231, 76, 60, 0.4);
+        }
+
+        /* Modal styling */
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            backdrop-filter: blur(5px);
+        }
+
+        .modal {
+            background: white;
+            padding: 2rem;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            animation: modalFadeIn 0.3s ease;
+        }
+
+        .modal-header {
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }
+
+        .modal-icon {
+            font-size: 3rem;
+            color: #e74c3c;
+            margin-bottom: 1rem;
+        }
+
+        .modal-title {
+            font-size: 1.5rem;
+            color: #2c3e50;
+            margin: 0;
+        }
+
+        .modal-body {
+            margin-bottom: 1.5rem;
+        }
+
+        .modal-message {
+            color: #34495e;
+            line-height: 1.6;
+            margin-bottom: 1rem;
+        }
+
+        .modal-warning {
+            background: #fff3cd;
+            padding: 0.8rem;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #856404;
+        }
+
+        .modal-warning i {
+            font-size: 1.2rem;
+        }
+
+        .modal-buttons {
+            display: flex;
+            gap: 1rem;
+            justify-content: flex-end;
+        }
+
+        .modal-button {
+            padding: 0.8rem 1.5rem;
+            border: none;
+            border-radius: 8px;
+            font-weight: 600;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .modal-cancel {
+            background: #f8f9fa;
+            color: #6c757d;
+        }
+
+        .modal-cancel:hover {
+            background: #e9ecef;
+        }
+
+        .modal-confirm {
+            background: linear-gradient(135deg, #e74c3c, #c0392b);
+            color: white;
+        }
+
+        .modal-confirm:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(231, 76, 60, 0.4);
+        }
+
+        @keyframes modalFadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         /* Notification styling */
         .notification {
             position: fixed;
