--- a/quiz.html
+++ b/quiz.html
@@ -11,16 +11,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <a href="materi.html" class="back-button">
+    <a href="materi.html" class="back-button" title="Kembali ke halaman materi">
         <i class="fas fa-arrow-left"></i>
-        Kembali
     </a>
 
     <div class="construction-container">
         <div class="construction-content">
             <i class="fas fa-tools construction-icon"></i>
             <h1>Materi Sedang Disusun</h1>
-            <p>Mohon maaf, materi tentang Mad masih dalam tahap pengembangan. Kami sedang menyusun konten yang berkualitas untuk pembelajaran Anda.</p>
+            <p>Mohon maaf, materi pertanyaan Quiz masih dalam tahap pengembangan. Kami sedang menyusun konten yang berkualitas untuk pembelajaran Anda.</p>
             <div class="construction-info">
                 <i class="fas fa-clock"></i>
                 <span>Segera hadir!</span>
