--- a/nun.html
+++ b/nun.html
@@ -12,11 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <a href="materi.html" class="back-button">
-        <i class="fas fa-arrow-left"></i>
-        Kembali
-    </a>
-
     <header class="materi-detail-header">
         <div class="container">
             <div class="materi-title">
@@ -30,6 +25,9 @@
     <!-- Module buttons navigation -->
     <div class="module-buttons">
         <div class="container">
+            <a href="materi.html" class="back-button" title="Kembali ke halaman materi">
+                <i class="fas fa-arrow-left"></i>
+            </a>
             <a href="nun.html" class="module-button active">
                 <span class="arabic-letter small">ن</span>
                 Nun Mati
