--- a/lam.html
+++ b/lam.html
@@ -63,7 +63,7 @@
                     <div class="step" data-step="2">Idzhar Syamsyiah</div>
                     <div class="step" data-step="3">Tes Pemahaman</div>
                 </div>
-            </div>
+            </div> <!-- comment -->
 
             <div class="content-section active" id="step-1">
                 <h2>Idzhar Qomariyah</h2>
