--- a/mim.html
+++ b/mim.html
@@ -20,7 +20,7 @@
             </div>
             <p class="subtitle">Pelajari hukum bacaan mim mati secara bertahap</p>
         </div>
-    </header>
+    </header> <!-- comment -->
 
     <!-- Module buttons navigation -->
     <div class="module-buttons">
