Update index.html: Change chat header name from 'Ustad Panji' to 'Habibi'

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hurufia - Belajar Tajwid Online</title>
+    <link rel="icon" href="asset/ustad.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/chat.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -193,7 +194,7 @@
     <!-- Chat Widget -->
     <div class="chat-widget" id="chatPopup">
         <div class="chat-header" id="chatHeader">
-            <h3><img src="asset/ustad.svg" alt="Ikon Ustad" style="width: 2em; height: 2em; vertical-align: -0.125em; margin-right: 0.25em;"> Ustad Panji</h3>
+            <h3><img src="asset/ustad.svg" alt="Ikon Ustad" style="width: 2em; height: 2em; vertical-align: -0.125em; margin-right: 0.25em;"> Habibi</h3>
             <div class="chat-controls">
                 <button id="chatCollapseBtn" class="chat-control-btn" title="Ciutkan">
                     <i class="fas fa-chevron-down"></i>
