--- a/index.html
+++ b/index.html
@@ -273,5 +273,7 @@
         });
     </script>
     <script src="js/chat.js"></script>
+    <!-- SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
